# asimov-chromium-module

./: CHANGES.md  Cargo.toml  README.md
.asimov/: module.yaml
.github/workflows/: test.yaml
src/: bookmarks.rs  brave.rs  browsers.rs  chrome.rs  chromium.rs  edge.rs  jq.rs  lib.rs
src/cataloger/: main.rs
src/fetcher/: main.rs
src/importer/: main.rs
src/jq/: bookmarks.jq  flatten.jq
src/reader/: main.rs
src/specialized/: arc.rs
src/utils/: mod.rs  profile.rs
