# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "asimov-chromium-module"
version = "0.1.0"
authors = ["ASIMOV Community"]
edition = "2024"
#rust-version = "1.85"
description = "ASIMOV module for Chromium (and Brave, Google Chrome) bookmark import."
#documentation = "https://docs.rs/asimov-chromium-module"
readme = true
homepage = "https://github.com/asimov-modules"
repository = "https://github.com/asimov-modules/asimov-chromium-module"
license = "Unlicense"
keywords = ["asimov-module", "asimov", "ai"]
categories = ["command-line-utilities", "text-processing"]              # TODO
publish = true

[features]
default = ["all", "cli", "std"]
all = ["pretty", "tracing"]
cli = ["asimov-module/cli", "std", "dep:clap", "dep:clientele"]
std = ["asimov-module/std"]
unstable = []

# Optional features:
pretty = ["know/pretty", "miette/fancy", "dep:colored_json"]
tracing = ["asimov-module/tracing", "clientele?/tracing"]

[dependencies]
asimov-module = { version = "25.0.0-dev.13", default-features = false }
getenv = { version = "0.1.2", default-features = false }
jq = { version = "0.1", default-features = false, features = ["all"] }
know = { version = "0.2.2", features = ["serde"] }
miette = { version = "7.6", default-features = false, features = [] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }

# Optional integrations:
clap = { version = "4.5", default-features = false, features = [
    "std",
], optional = true }
clientele = { version = "0.3.8", default-features = false, features = [
    "clap",
    "std",
], optional = true }
colored_json = { version = "5", default-features = false, optional = true }
phf = { version = "0.11", features = ["macros"] }

[profile.release]
opt-level = "z"
strip = true
lto = "thin"

[[bin]]
name = "asimov-chromium-fetcher"
path = "src/fetcher/main.rs"
required-features = ["cli"]

[[bin]]
name = "asimov-chromium-reader"
path = "src/reader/main.rs"
required-features = ["cli"]
